@@ -3,6 +3,7 @@ package uk.ac.cam.cares.jps.agent.openmeteoagent;
 import javax.servlet.annotation.WebServlet;
 import javax.servlet.http.HttpServletRequest;
 import javax.ws.rs.BadRequestException;
+import javax.ws.rs.HttpMethod;
 
 import com.google.gson.Gson;
 import com.google.gson.reflect.TypeToken;
@@ -29,8 +30,7 @@ import java.sql.Connection;
 import java.text.DateFormat;
 import java.text.ParseException;
 import java.text.SimpleDateFormat;
-import java.time.Duration;
-import java.time.LocalDateTime;
+import java.time.*;
 import java.time.temporal.ChronoUnit;
 import java.util.*;
 import java.util.stream.Collectors;
@@ -42,18 +42,24 @@ import java.util.stream.IntStream;
                 OpenMeteoAgent.URI_DELETE
         })
 public class OpenMeteoAgent extends JPSAgent {
+    public static final String KEY_REQ_METHOD = "method";
+    public static final String KEY_REQ_URL = "requestUrl";
+
     public static final String URI_RUN = "/run";
     public static final String URI_DELETE = "/delete";
 
-    private static final String KEY_LAT = "latitude";
-    private static final String KEY_LONG = "longitude";
-    private static final String KEY_START = "start_date";
-    private static final String KEY_END = "end_date";
+    public static final String KEY_LAT = "latitude";
+    public static final String KEY_LON = "longitude";
+    public static final String KEY_START = "start_date";
+    public static final String KEY_END = "end_date";
+
+    public static final String KEY_STATION = "stationIRI";
 
     private static final String API_URL = "https://archive-api.open-meteo.com/v1/archive";
     private static final String API_HOURLY = "hourly";
     private static final String API_HOURLY_UNITS = "hourly_units";
     private static final String API_TIME = "time";
+    private static final String API_TIMEZONE = "timezone";
     private static final String API_PARAMETER_TEMP = "temperature_2m";
     private static final String ONTOEMS_TEMP = "AirTemperature";
     private static final String API_PARAMETER_HUMIDITY = "relativehumidity_2m";
@@ -78,6 +84,7 @@ public class OpenMeteoAgent extends JPSAgent {
     private static final String ONTOEMS_WINDDIRECTION = "WindDirection";
     private static final String API_WINDSPEED_UNIT = "windspeed_unit=ms";
     private static final String API_ELEVATION = "elevation";
+    private static final String API_OFFSET = "utc_offset_seconds";
 
     private String ontoemsURI;
     private String ontotimeseriesURI;
@@ -95,15 +102,15 @@ public class OpenMeteoAgent extends JPSAgent {
     private static final String OM_WM = "om:wattPerSquareMetre";
     private List<String> API_PARAMETERS = Arrays.asList(API_PARAMETER_TEMP, API_PARAMETER_HUMIDITY, API_PARAMETER_DEWPOINT, API_PARAMETER_PRESSURE, API_PARAMETER_RAIN, API_PARAMETER_SNOW, API_PARAMETER_CLOUD, API_PARAMETER_DNI, API_PARAMETER_DHI, API_PARAMETER_WINDSPEED, API_PARAMETER_WINDDIRECTION);
     private List<String> ontoems_conecpts = Arrays.asList(ONTOEMS_TEMP, ONTOEMS_HUMIDITY, ONTOEMS_DEWPOINT, ONTOEMS_PRESSURE, ONTOEMS_RAIN, ONTOEMS_SNOW, ONTOEMS_CLOUD, ONTOEMS_DNI, ONTOEMS_DHI, ONTOEMS_WINDSPEED, ONTOEMS_WINDDIRECTION);
-    private Map<String, String> api_ontoems = IntStream.range(0, API_PARAMETERS.size()).boxed()
-            .collect(Collectors.toMap(API_PARAMETERS::get, ontoems_conecpts::get));
+    private Map<String, String> ontoems_api = IntStream.range(0, API_PARAMETERS.size()).boxed()
+            .collect(Collectors.toMap(ontoems_conecpts::get, API_PARAMETERS::get));
     private Map<String, TimeSeriesClient.Type> api_timeseries = new HashMap<>();
     private Double latitude;
     private Double longitude;
     private Double elevation;
     private RemoteRDBStoreClient rdbStoreClient;
     private RemoteStoreClient storeClient;
-    private TimeSeriesClient tsClient;
+    private TimeSeriesClient<OffsetDateTime> tsClient;
     private String route;
 
     public OpenMeteoAgent() {
@@ -120,74 +127,50 @@ public class OpenMeteoAgent extends JPSAgent {
     @Override
     public JSONObject processRequestParameters(JSONObject requestParams) {
         if (validateInput(requestParams)) {
-            if (requestParams.getString("requestUrl").contains(URI_RUN)) {
-                latitude = requestParams.getDouble(KEY_LAT);
-                longitude = requestParams.getDouble(KEY_LONG);
+            if (requestParams.getString(KEY_REQ_URL).contains(URI_RUN)) {
+                latitude = Double.parseDouble(requestParams.getString(KEY_LAT));
+                longitude = Double.parseDouble(requestParams.getString(KEY_LON));
                 JSONObject response = getWeatherData(latitude, longitude, requestParams.getString(KEY_START), requestParams.getString(KEY_END));
+
+                Integer offset = response.getInt(API_OFFSET);
 
                 JSONObject weatherData = response.getJSONObject(API_HOURLY);
                 JSONObject weatherUnit = response.getJSONObject(API_HOURLY_UNITS);
 
                 elevation = response.getDouble(API_ELEVATION);
 
-                List<LocalDateTime> timesList = getTimesList(weatherData, API_TIME);
+                List<OffsetDateTime> timesList = getTimesList(weatherData, API_TIME, offset);
                 Map<String, List<Object>> parsedData = parseWeatherData(weatherData, weatherUnit);
 
-                String stationIRI = createStation(latitude, longitude, elevation);
+                String stationIRI = getStation(latitude, longitude);
 
-                WhereBuilder wb = new WhereBuilder()
-                        .addPrefix("ontoems", ontoemsURI)
-                        .addPrefix("om", omURI)
-                        .addPrefix("rdf", rdfURI);
+                List<TimeSeries<OffsetDateTime>> tsList = new ArrayList<>();
 
-                wb.addWhere(NodeFactory.createURI(stationIRI), "rdf:type", "ontoems:" + STATION);
+                tsClient = new TimeSeriesClient<>(storeClient, OffsetDateTime.class);
 
-                String apiParam;
-                String ontoemsClass;
-                String quantityIRI;
-                String measureIRI;
+                if (stationIRI.isEmpty()) {
+                    stationIRI = createStation(latitude, longitude, elevation);
+                    instantiateWeather(stationIRI, parsedData, timesList, tsList);
+                }
+                else {
+                    JSONArray queryResults = getWeatherIRI(stationIRI);
+                    try (Connection conn = rdbStoreClient.getConnection()) {
+                        for (int i = 0; i < queryResults.length(); i++) {
+                            // delete old time series history
+                            OffsetDateTime min = tsClient.getMinTime(queryResults.getJSONObject(i).getString("measure"), conn);
+                            OffsetDateTime max = tsClient.getMaxTime(queryResults.getJSONObject(i).getString("measure"), conn);
+                            tsClient.deleteTimeSeriesHistory(queryResults.getJSONObject(i).getString("measure"), min, max, conn);
 
-                List<List<String>> dataIRIs = new ArrayList<>();
-                List<String> dataIRI;
-                List<TimeSeriesClient.Type> tsTypes = new ArrayList<>();
-                List<Duration> durations = new ArrayList<>();
-                List<ChronoUnit> units = new ArrayList<>();
-                List<TimeSeries<LocalDateTime>> tsList = new ArrayList<>();
-                List<Double> value;
-
-                for (var entry : api_ontoems.entrySet()) {
-                    apiParam = entry.getKey();
-
-                    if (parsedData.containsKey(apiParam)) {
-                        List<Object> data = parsedData.get(apiParam);
-                        ontoemsClass = entry.getValue();
-                        quantityIRI = ontoemsURI + ontoemsClass + "Quantity_" + UUID.randomUUID();
-                        measureIRI = ontoemsURI + ontoemsClass + "_" + UUID.randomUUID();
-                        createUpdate(wb, stationIRI, quantityIRI, "ontoems:" + ontoemsClass, measureIRI, (String) data.get(0));
-                        dataIRI = Arrays.asList(measureIRI);
-                        dataIRIs.add(dataIRI);
-                        value = (List<Double>) data.get(1);
-                        tsList.add(new TimeSeries<>(timesList, dataIRI, List.of(value)));
-                        tsTypes.add(api_timeseries.get(apiParam));
-                        if (api_timeseries.get(apiParam) == TimeSeriesClient.Type.AVERAGE) {
-                            durations.add(Duration.ofHours(1));
-                            units.add(ChronoUnit.HOURS);
-                        } else {
-                            durations.add(null);
-                            units.add(null);
+                            // new time series
+                            List<String> dataIRI = Arrays.asList(queryResults.getJSONObject(i).getString("measure"));
+                            String apiParam = ontoems_api.get(queryResults.getJSONObject(i).getString("weatherParameter").split(ontoemsURI)[1]);
+                            tsList.add(new TimeSeries<>(timesList, dataIRI, List.of((List<Double>) parsedData.get(apiParam).get(1))));
                         }
+                    } catch (Exception e) {
+                        e.printStackTrace();
+                        throw new JPSRuntimeException(e);
                     }
                 }
-
-                List<List<Class<?>>> dataClass = Collections.nCopies(dataIRIs.size(), Arrays.asList(Double.class));
-                List<String> timeUnit = Collections.nCopies(dataIRIs.size(), LocalDateTime.class.getSimpleName());
-
-                UpdateBuilder ub = new UpdateBuilder()
-                        .addInsert(wb);
-
-                this.updateStore(route, ub.buildRequest().toString());
-
-                createTimeSeries(dataIRIs, dataClass, timeUnit, tsTypes, durations, units);
 
                 try (Connection conn = rdbStoreClient.getConnection()) {
                     tsClient.bulkaddTimeSeriesData(tsList, conn);
@@ -195,29 +178,22 @@ public class OpenMeteoAgent extends JPSAgent {
                     e.printStackTrace();
                     throw new JPSRuntimeException(e);
                 }
+
+                requestParams.append(KEY_STATION, stationIRI);
             }
-            else if (requestParams.getString("requestUrl").contains(URI_DELETE)) {
-                latitude = requestParams.getDouble(KEY_LAT);
-                longitude = requestParams.getDouble(KEY_LONG);
+            else if (requestParams.getString(KEY_REQ_URL).contains(URI_DELETE)) {
+                latitude = Double.parseDouble(requestParams.getString(KEY_LAT));
+                longitude = Double.parseDouble(requestParams.getString(KEY_LON));
 
                 String stationIRI = getStation(latitude, longitude);
 
-                WhereBuilder wb = new WhereBuilder()
-                        .addPrefix("ontoems", ontoemsURI)
-                        .addPrefix("ontotimeseries", ontotimeseriesURI)
-                        .addPrefix("om", omURI);
+                if (stationIRI.isEmpty()) {
+                    throw new JPSRuntimeException("No reporting station found at the given coordinate.");
+                }
 
-                addTimeSeriesWhere(wb, stationIRI);
+                JSONArray queryResults = getWeatherIRI(stationIRI);
 
-                SelectBuilder sb = new SelectBuilder()
-                        .addVar("timeseries")
-                        .addVar("quantity")
-                        .addVar("measure")
-                        .addWhere(wb);
-
-                JSONArray queryResults = this.queryStore(route, sb.build().toString());
-
-                tsClient = new TimeSeriesClient<>(storeClient, LocalDateTime.class);
+                tsClient = new TimeSeriesClient<>(storeClient, OffsetDateTime.class);
 
                 try (Connection conn = rdbStoreClient.getConnection()) {
                     for (int i = 0; i < queryResults.length(); i++){
@@ -258,26 +234,28 @@ public class OpenMeteoAgent extends JPSAgent {
      */
     @Override
     public boolean validateInput(JSONObject requestParams) {
-        boolean validate;
+        boolean validate = false;
 
-        try{
-            // check latitude and longitude are provided, and are numbers
-            validate = !requestParams.get(KEY_LAT).equals(null) && ! requestParams.get(KEY_LONG).equals(null)
-                    && !(requestParams.get(KEY_LAT) instanceof String) && !(requestParams.get(KEY_LONG) instanceof String);
+        try {
+            if (requestParams.get(KEY_REQ_METHOD).equals(HttpMethod.POST)) {
+                // check latitude and longitude are provided, and are numbers
+                validate = !requestParams.get(KEY_LAT).equals(null) && !requestParams.get(KEY_LON).equals(null)
+                        && isNumber(requestParams.getString(KEY_LAT)) && isNumber(requestParams.getString(KEY_LON));
 
-            if (requestParams.getString("requestUrl").contains(URI_RUN)){
-                validate = !requestParams.getString(KEY_START).isEmpty() && !requestParams.getString(KEY_END).isEmpty()
-                        && validateDate(requestParams.getString(KEY_START))
-                        && validateDate(requestParams.getString(KEY_END));
+                if (requestParams.getString(KEY_REQ_URL).contains(URI_RUN)) {
+                    validate = validate &&!requestParams.getString(KEY_START).isEmpty() && !requestParams.getString(KEY_END).isEmpty()
+                            && validateDate(requestParams.getString(KEY_START))
+                            && validateDate(requestParams.getString(KEY_END));
 
-                SimpleDateFormat ymd = new SimpleDateFormat("yyyy-MM-dd");
-                Date start = ymd.parse(requestParams.getString(KEY_START));
-                Date end = ymd.parse(requestParams.getString(KEY_END));
-                Date now = new Date();
+                    SimpleDateFormat ymd = new SimpleDateFormat("yyyy-MM-dd");
+                    Date start = ymd.parse(requestParams.getString(KEY_START));
+                    Date end = ymd.parse(requestParams.getString(KEY_END));
+                    Date now = new Date();
 
-                // start date cannot be later than end date, and end date cannot be later than the date at the time of the incoming request
-                validate = validate && start.before(end)
-                        && (end.before(now) || end.equals(now));
+                    // start date cannot be later than end date, and end date cannot be later than the date at the time of the incoming request
+                    validate = validate && !end.before(start)
+                            && (end.before(now) || end.equals(now));
+                }
             }
         }
         catch (Exception e){
@@ -316,9 +294,9 @@ public class OpenMeteoAgent extends JPSAgent {
      */
     public JSONObject getWeatherData(Double latitude, Double longitude, String startDate, String endDate) {
         String query = KEY_LAT + "=" + latitude + "&";
-        query = query + KEY_LONG + "=" + longitude + "&";
+        query = query + KEY_LON + "=" + longitude + "&";
         query = query + KEY_START + "=" + startDate + "&";
-        query = query + KEY_END + "=" + endDate + "&" + API_WINDSPEED_UNIT +"&" + API_HOURLY + "=";
+        query = query + KEY_END + "=" + endDate + "&" + API_TIMEZONE + "=auto&" + API_WINDSPEED_UNIT +"&" + API_HOURLY + "=";
 
         for (String parameter: API_PARAMETERS){
             query = query + parameter + ",";
@@ -351,7 +329,7 @@ public class OpenMeteoAgent extends JPSAgent {
      * @param weatherUnit JSONObject containing the units of the weather data retrieved by the API
      * @return a Map object with the key being the API weather parameters, and the values being the corresponding units ontology and the corresponding data parsed to a list
      */
-    public  Map<String, List<Object>> parseWeatherData(JSONObject weatherData, JSONObject weatherUnit) {
+    private  Map<String, List<Object>> parseWeatherData(JSONObject weatherData, JSONObject weatherUnit) {
         Map<String, List<Object>> data = new HashMap<>();
         List<Object> temp;
         JSONArray tempJSONArray;
@@ -401,7 +379,7 @@ public class OpenMeteoAgent extends JPSAgent {
      * @param ele observation elevation of OntoEMS:ReportingStation instance
      * @return OntoEMS:ReportingStation instance IRI
      */
-    public String createStation(Double lat, Double lon, Double ele) {
+    private String createStation(Double lat, Double lon, Double ele) {
         String stationIRI = ontoemsURI + STATION + "_" + UUID.randomUUID();
 
         String coordinate = lat + "placeHolder" + lon;
@@ -428,13 +406,13 @@ public class OpenMeteoAgent extends JPSAgent {
     /**
      * Creates SPARQL update according to the ontoems ontology
      * @param builder where builder
-     * @param station reporting station iri
-     * @param quantity quantity iri
+     * @param station reporting station IRI
+     * @param quantity quantity IRI
      * @param type type of quantity
-     * @param measure measure iri
+     * @param measure measure IRI
      * @param unit unit of quantity
      */
-    public void createUpdate(WhereBuilder builder, String station, String quantity, String type, String measure, String unit) {
+    private void createUpdate(WhereBuilder builder, String station, String quantity, String type, String measure, String unit) {
         builder.addWhere(NodeFactory.createURI(station),  "ontoems:reports", NodeFactory.createURI(quantity))
                 .addWhere(NodeFactory.createURI(quantity), "rdf:type", type)
                 .addWhere(NodeFactory.createURI(quantity), "om:hasValue", NodeFactory.createURI(measure))
@@ -443,23 +421,24 @@ public class OpenMeteoAgent extends JPSAgent {
     }
 
     /**
-     * Creates query for getting the quantity, measure, and time series iri related to the reporting station iri
+     * Creates query for the quantity IRI, quantity type, measure IRI, and time series IRI related to the reporting station IRI
      * @param builder where builder
-     * @param station reporting station iri
+     * @param station reporting station IRI
      */
-    public void addTimeSeriesWhere(WhereBuilder builder, String station) {
+    private void addWeatherWhere(WhereBuilder builder, String station) {
         builder.addWhere(NodeFactory.createURI(station), "ontoems:reports", "?quantity")
+                .addWhere("?quantity", "rdf:type", "?weatherParameter")
                 .addWhere("?quantity", "om:hasValue", "?measure")
                 .addWhere("?measure", "ontotimeseries:hasTimeSeries", "?timeseries");
     }
 
     /**
-     * Queries for the OntoEMS:ReportingStation iri with the given lat, lon coordinate
+     * Queries for the OntoEMS:ReportingStation IRI with the given lat, lon coordinate
      * @param lat latitude of the reporting station
      * @param lon longitude of the reporting station
-     * @return reporting station iri at the given coordinate if it exists
+     * @return reporting station IRI at the given coordinate if it exists
      */
-    public String getStation(Double lat, Double lon) {
+    private String getStation(Double lat, Double lon) {
         String coordinate = lat + "placeHolder" + lon;
 
         WhereBuilder wb = new WhereBuilder()
@@ -480,7 +459,7 @@ public class OpenMeteoAgent extends JPSAgent {
         JSONArray queryResult = this.queryStore(route, queryString);
 
         if (queryResult.isEmpty()){
-            throw new JPSRuntimeException("No reporting station found at the given coordinate.");
+            return "";
         }
         else{
             return queryResult.getJSONObject(0).getString("station");
@@ -488,10 +467,34 @@ public class OpenMeteoAgent extends JPSAgent {
     }
 
     /**
-     * Deletes all triples related to the given iri
-     * @param iri iri to delete
+     * Queries for and returns the quantity IRI, quantity type, measure IRI, and time series IRI related to stationIRI
+     * @param stationIRI IRI of weather station
+     * @return query result for quantity IRI, quantity type, measure IRI, and time series IRI related to stationIRI
      */
-    public void deleteIRI(String iri){
+    private JSONArray getWeatherIRI(String stationIRI) {
+        WhereBuilder wb = new WhereBuilder()
+                .addPrefix("ontoems", ontoemsURI)
+                .addPrefix("ontotimeseries", ontotimeseriesURI)
+                .addPrefix("om", omURI)
+                .addPrefix("rdf", rdfURI);
+
+        addWeatherWhere(wb, stationIRI);
+
+        SelectBuilder sb = new SelectBuilder()
+                .addVar("timeseries")
+                .addVar("quantity")
+                .addVar("measure")
+                .addVar("weatherParameter")
+                .addWhere(wb);
+
+        return this.queryStore(route, sb.build().toString());
+    }
+
+    /**
+     * Deletes all triples related to the given IRI
+     * @param iri IRI to delete
+     */
+    private void deleteIRI(String iri){
         UpdateBuilder db = new UpdateBuilder()
                 .addWhere(NodeFactory.createURI(iri), "?p", "?o");
 
@@ -515,8 +518,6 @@ public class OpenMeteoAgent extends JPSAgent {
      * @param units temporal unit of the averaging period for time series of TimeSeriesClient.Type.AVERAGE
      */
     private void createTimeSeries(List<List<String>> dataIRI, List<List<Class<?>>> dataClass, List<String> timeUnit, List<TimeSeriesClient.Type> type, List<Duration> durations, List<ChronoUnit> units) {
-        tsClient = new TimeSeriesClient<>(storeClient, LocalDateTime.class);
-
         try(Connection conn = rdbStoreClient.getConnection()){
             tsClient.bulkInitTimeSeries(dataIRI, dataClass, timeUnit, conn, type, durations, units);
         }
@@ -571,19 +572,106 @@ public class OpenMeteoAgent extends JPSAgent {
     }
 
     /**
-     * Parses the times in data into a list of LocalDateTime
+     * Parses the times in data into a list of OffsetDateTime
      * @param data JSONObject containing the weather data
      * @param key key to getting the times
-     * @return the times parsed into a list of LocalDateTime
+     * @param offset timezone of the weather station
+     * @return the times parsed into a list of OffsetDateTime
      */
-    private List<LocalDateTime> getTimesList(JSONObject data, String key) {
+    private List<OffsetDateTime> getTimesList(JSONObject data, String key, Integer offset) {
         JSONArray array = data.getJSONArray(key);
-        List<LocalDateTime> timesList = new ArrayList<>();
+
+        ZoneOffset zoneOffset = ZoneOffset.ofTotalSeconds(offset);
+
+        List<OffsetDateTime> timesList = new ArrayList<>();
 
         for (int i = 0; i < array.length(); i++){
-            timesList.add(LocalDateTime.parse(array.getString(i)));
+            timesList.add(LocalDateTime.parse(array.getString(i)).atOffset(zoneOffset));
         }
 
         return  timesList;
+    }
+
+    /**
+     * Instantiates weather data as time series
+     * @param stationIRI IRI of weather station
+     * @param parsedData weather data
+     * @param timesList list of timestamps of parsedData
+     * @param tsList list to store TimeSeries
+     */
+    private void instantiateWeather(String stationIRI,  Map<String, List<Object>> parsedData, List<OffsetDateTime> timesList,  List<TimeSeries<OffsetDateTime>> tsList) {
+        WhereBuilder wb = new WhereBuilder()
+                .addPrefix("ontoems", ontoemsURI)
+                .addPrefix("om", omURI)
+                .addPrefix("rdf", rdfURI);
+
+        wb.addWhere(NodeFactory.createURI(stationIRI), "rdf:type", "ontoems:" + STATION);
+
+        String apiParam;
+        String ontoemsClass;
+        String quantityIRI;
+        String measureIRI;
+
+        List<List<String>> dataIRIs = new ArrayList<>();
+        List<String> dataIRI;
+        List<TimeSeriesClient.Type> tsTypes = new ArrayList<>();
+        List<Duration> durations = new ArrayList<>();
+        List<ChronoUnit> units = new ArrayList<>();
+        List<Double> value;
+
+        for (var entry : ontoems_api.entrySet()) {
+            apiParam = entry.getValue();
+
+            if (parsedData.containsKey(apiParam)) {
+                List<Object> data = parsedData.get(apiParam);
+                ontoemsClass = entry.getKey();
+                quantityIRI = ontoemsURI + ontoemsClass + "Quantity_" + UUID.randomUUID();
+                measureIRI = ontoemsURI + ontoemsClass + "_" + UUID.randomUUID();
+
+                // SPARQL update for weather triples
+                createUpdate(wb, stationIRI, quantityIRI, "ontoems:" + ontoemsClass, measureIRI, (String) data.get(0));
+
+                // store time series information
+                dataIRI = Arrays.asList(measureIRI);
+                dataIRIs.add(dataIRI);
+                value = (List<Double>) data.get(1);
+                tsList.add(new TimeSeries<>(timesList, dataIRI, List.of(value)));
+                tsTypes.add(api_timeseries.get(apiParam));
+                if (api_timeseries.get(apiParam) == TimeSeriesClient.Type.AVERAGE) {
+                    durations.add(Duration.ofHours(1));
+                    units.add(ChronoUnit.HOURS);
+                } else {
+                    durations.add(null);
+                    units.add(null);
+                }
+            }
+        }
+
+        List<List<Class<?>>> dataClass = Collections.nCopies(dataIRIs.size(), Arrays.asList(Double.class));
+        List<String> timeUnit = Collections.nCopies(dataIRIs.size(), OffsetDateTime.class.getSimpleName());
+
+        UpdateBuilder ub = new UpdateBuilder()
+                .addInsert(wb);
+
+        // instantiate weather triples
+        this.updateStore(route, ub.buildRequest().toString());
+
+        // create time series for weather data
+        createTimeSeries(dataIRIs, dataClass, timeUnit, tsTypes, durations, units);
+    }
+
+    /**
+     * Checks if a string is able to be parsable as a number
+     * @param number string to check
+     * @return boolean value of check
+     */
+    public boolean isNumber(String number) {
+        try{
+            Double.parseDouble(number);
+            return true;
+        }
+        catch (Exception e){
+            return false;
+        }
     }
 }
